--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -2,6 +2,8 @@
 
 - form_for(@post) do |f|
   = f.error_messages
+  = f.label :title
+  = f.text_field :title
   = f.label :body
   = f.text_area :body
   = f.submit "Create"
